Fix audio source and improve HTML structure
Updated audio source link and adjusted HTML structure.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p class="subtitle">Exercício de Imersão Sensorial</p>
         
         <audio controls autoplay muted playsinline>
-            <source src="https://drive.google.com/file/d/1P-6rHT2osvyCgzN-X63MPZxKT_InaoPU/preview" type="audio/mpeg">
+            <source src="https://drive.google.com/uc?export=download&id=1P-6rHT2osvyCgzN-X63MPZxKT_InaoPU" type="audio/mpeg">
             Seu navegador não suporta a tag de áudio.
         </audio>
         
